<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:background="@color/dark"
    tools:context=".ui.fragment.search.SearchFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/placeholder_row_desc" />

            <include layout="@layout/placeholder_row_desc" />

            <include layout="@layout/placeholder_row_desc" />

            <include layout="@layout/placeholder_row_desc" />

            <include layout="@layout/placeholder_row_desc" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/textView_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_filter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_filter"
        app:layout_constraintStart_toEndOf="@id/textView_filter"
        tools:text="@string/movie" />

    <ImageView
        android:id="@+id/search_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.4"
        android:src="@drawable/ic_movie"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/search_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/search_your_movie"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/search_imageView"
        app:layout_constraintStart_toStartOf="@+id/search_imageView"
        app:layout_constraintTop_toBottomOf="@+id/search_imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_filter"
        tools:listitem="@layout/item_row_movie_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>